# xfce4-genmon-plugin

./: .gitignore  AUTHORS  CSS Styling.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  configure  configure.ac  configure.ac.in  configure~  datetime  disktemp  meson.build  rebuild
data/: Makefile.am
data/icons/: Makefile.am  meson.build
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
glade/: config_gui.glade  config_gui.gladep
panel-plugin/: Makefile.am  Makefile.in  cmdspawn.c  cmdspawn.h  config_gui.c  config_gui.h  debug.c  debug.h  genmon.desktop.in  genmon.desktop.in.in  main.c  meson.build
po/: ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  (+25 more)
scripts/: Makefile.am  datetime  disktemp  dkspuse  gmail  googcal  googcal.in  meson.build  migrate_to_xfconf.sh  monBandwidth  monBat  monCPU  monTime  monUSB  monWIFI  samples.txt  sysstat  twit
